# dldbt

./: .dldbt.yml.example  .dlgit.yml.example  .gitignore  README.md  dldbt-implementation-plan.md  docker-compose.yml  pyproject.toml  spike-findings.md  spike.py
src/dldbt/: cli.py  config.py  errors.py
src/dldbt/catalog/: adapter.py  ducklake_pg.py
src/dldbt/dbt_ops/: manifest.py  profile.py  runner.py
src/dldbt/dbt_ops/macros/: generate_schema_name.sql
src/dldbt/git_ops/: branch.py  hooks.py  match.py
src/dlgit/: cli.py  config.py  errors.py
src/dlgit/catalog/: adapter.py  ducklake_pg.py
src/dlgit/git_ops/: branch.py
src/dlgit_spike/: __init__.py
tests/: conftest.py
tests/integration/: test_branch_lifecycle.py  test_dbt_end_to_end.py  test_git_hooks.py
tests/integration/fixtures/dbt_mini/: dbt_project.yml
tests/integration/fixtures/dbt_mini/models/: fct_events.sql  mid_events.sql  stg_events.sql
tests/integration/fixtures/dbt_mini/seeds/: raw_events.csv
tests/unit/: test_branch_name.py  test_config.py  test_hooks.py  test_manifest.py  test_profile.py  test_runner.py  test_skip_patterns.py
