[project]
name = "dlgit-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Ginsberg", email = "jginsberg3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "psycopg[binary]>=3.3.3",
]

[project.scripts]
dlgit-spike = "dlgit_spike:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
